--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.defer-datasource-initialization=true
 
 ## h2
 spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
